Remove 'Quarter' option, and fix Dropdown getting covered

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,7 @@
 .radio-buttons {
     display:grid;
     grid-template-columns: 12.5% 20%;
-    grid-row: auto auto;
+    grid-template-rows: 50vh auto; /* clean up later */
     grid-column-gap: 2.5%;
     grid-row-gap: 20px;
     padding-left: 10%;
@@ -11,6 +11,11 @@
 .radio-buttons .box{
     display:flex;
     justify-content: left;
+    align-content: flex-start;
     font-size:40px;
     font-family:sans-serif; 
-  }
+}
+
+#dropdown {
+    align-content: unset;
+}
